<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/raleway_black"
        android:padding="18dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLogo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingBottom="14dp"
        android:text="@string/getStarted"
        android:textColor="@color/colorAccent"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/descLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textGetStarted"
        android:fontFamily="@font/open_sans"
        android:paddingBottom="28dp"
        android:text="@string/descLogin"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descLogin"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/open_sans_light"
        android:paddingBottom="1dp"
        android:text="@string/descMobile"
        android:textColor="@color/colorAccent" />

    <RelativeLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMobile">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_textSize="18sp" />

        <EditText
            android:id="@+id/loginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/countryCodeHolder"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/mobileHint"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/sendOtpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginContainer"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_background"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/loginBtnText"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/open_sans"
        android:text="@string/termsandconditions"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="13sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_above="@+id/terms"
        android:layout_below="@+id/loginContainer"
        android:layout_alignStart="@+id/loginContainer"
        android:layout_alignEnd="@+id/loginContainer"
        android:layout_marginStart="137dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="267dp" />
</RelativeLayout>
